commit 121(sub validation set in html )

--- a/TeacherApp/templates/addstudent.html
+++ b/TeacherApp/templates/addstudent.html
@@ -23,7 +23,7 @@
                     <div class="mb-3">
                         <label class="form-label">Student Name</label>
                         <input type="text" name="student_name" class="form-control"
-                               onblur="validateName()">
+                               onkeyup="validateName()">
                         <small class="text-danger" id="err_name"></small>
                     </div>
 
@@ -31,7 +31,7 @@
                     <div class="mb-3">
                         <label class="form-label">Roll Number</label>
                         <input type="text" name="student_rollno" class="form-control"
-                               onblur="validateRoll()">
+                               onkeyup="validateRoll()">
                         <small class="text-danger" id="err_roll"></small>
                     </div>
 
@@ -39,7 +39,7 @@
                     <div class="mb-3">
                         <label class="form-label">Register Number</label>
                         <input type="text" name="student_regid" class="form-control"
-                               onblur="validateReg()">
+                               onkeyup="validateReg()">
                         <small class="text-danger" id="err_reg"></small>
                     </div>
 
@@ -78,7 +78,7 @@
                         <label class="form-label">Duration</label>
                         <input type="text" name="student_duration" class="form-control"
                                placeholder="2021-2025"
-                               onblur="validateDuration()">
+                               onkeyup="validateDuration()">
                         <small class="text-danger" id="err_duration"></small>
                     </div>
 
@@ -86,7 +86,7 @@
                     <div class="mb-3">
                         <label class="form-label">Mobile Number</label>
                         <input type="tel" name="student_phone" class="form-control"
-                               onblur="validatePhone()">
+                               onkeyup="validatePhone()">
                         <small class="text-danger" id="err_phone"></small>
                     </div>
 
@@ -94,7 +94,7 @@
                     <div class="mb-3">
                         <label class="form-label">Email Id</label>
                         <input type="email" name="student_email" class="form-control"
-                               onblur="validateEmail()">
+                               onkeyup="validateEmail()">
                         <small class="text-danger" id="err_email"></small>
                     </div>
 
@@ -102,7 +102,7 @@
                     <div class="mb-3">
                         <label class="form-label">Password</label>
                         <input type="text" name="student_password" class="form-control"
-                               onblur="validatePassword()">
+                               onkeyup="validatePassword()">
                         <small class="text-danger" id="err_pwd"></small>
                     </div>
 
@@ -110,7 +110,7 @@
                     <div class="mb-3">
                         <label class="form-label">Confirm Password</label>
                         <input type="text" name="student_confirm" class="form-control"
-                               onblur="validateConfirm()">
+                               onkeyup="validateConfirm()">
                         <small class="text-danger" id="err_confirm"></small>
                     </div>
 
