commit 122(sub validation set in html )

--- a/TeacherApp/templates/editstudent.html
+++ b/TeacherApp/templates/editstudent.html
@@ -21,7 +21,7 @@
                         <label class="form-label">Student Name</label>
                         <input type="text" name="student_name" class="form-control"
                                value="{{student.Student_name}}"
-                               onblur="validateName()">
+                               onkeyup="validateName()">
                         <small class="text-danger" id="err_name"></small>
                     </div>
 
@@ -29,7 +29,7 @@
                         <label class="form-label">Roll Number</label>
                         <input type="text" name="student_rollno" class="form-control"
                                value="{{student.Student_rollno}}"
-                               onblur="validateRoll()">
+                               onkeyup="validateRoll()">
                         <small class="text-danger" id="err_roll"></small>
                     </div>
 
@@ -37,7 +37,7 @@
                         <label class="form-label">Register Number</label>
                         <input type="text" name="student_regid" class="form-control"
                                value="{{student.Student_regid}}"
-                               onblur="validateReg()">
+                               onkeyup="validateReg()">
                         <small class="text-danger" id="err_reg"></small>
                     </div>
 
@@ -73,7 +73,7 @@
                         <label class="form-label">Duration</label>
                         <input type="text" name="student_duration" class="form-control"
                                value="{{student.Student_duration}}"
-                               onblur="validateDuration()">
+                               onkeyup="validateDuration()">
                         <small class="text-danger" id="err_duration"></small>
                     </div>
 
@@ -81,7 +81,7 @@
                         <label class="form-label">Mobile Number</label>
                         <input type="text" name="student_phone" class="form-control"
                                value="{{student.Student_phone}}"
-                               onblur="validatePhone()">
+                               onkeyup="validatePhone()">
                         <small class="text-danger" id="err_phone"></small>
                     </div>
 
@@ -89,7 +89,7 @@
                         <label class="form-label">Email Id</label>
                         <input type="email" name="student_email" class="form-control"
                                value="{{student.Student_email}}"
-                               onblur="validateEmail()">
+                               onkeyup="validateEmail()">
                         <small class="text-danger" id="err_email"></small>
                     </div>
 
@@ -97,7 +97,7 @@
                         <label class="form-label">Password</label>
                         <input type="text" name="student_password" class="form-control"
                                value="{{student.Student_password}}"
-                               onblur="validatePassword()">
+                               onkeyup="validatePassword()">
                         <small class="text-danger" id="err_pwd"></small>
                     </div>
 
@@ -105,7 +105,7 @@
                         <label class="form-label">Confirm Password</label>
                         <input type="text" name="student_confirm" class="form-control"
                                value="{{student.Student_confirm}}"
-                               onblur="validateConfirm()">
+                               onkeyup="validateConfirm()">
                         <small class="text-danger" id="err_confirm"></small>
                     </div>
 
