--- a/TeacherApp/templates/editsubject.html
+++ b/TeacherApp/templates/editsubject.html
@@ -8,25 +8,30 @@
         <h3 class="text-center mb-4" style="color:darkblue; font-weight:bold; font-size:30px; font-family:Arial;">Edit
             Subject</h3>
 
-        <form method="POST" action="{% url 'Updatesubject' sub_id=subject.id %}">
+        <form method="POST" action="{% url 'Updatesubject' sub_id=subject.id %}" name="myform" onsubmit="return Validation()">
             {% csrf_token %}
 
             <div class="mb-3">
                 <label class="form-label">Subject Name</label>
                 <input type="text" name="subject_name" placeholder="Enter Subject Name" class="form-control"
                        value="{{subject.Subject_name}}">
+                <small class="text-danger" id="err_subname"></small>
             </div>
 
             <div class="mb-3">
                 <label class="form-label">Subject Code</label>
                 <input type="text" name="subject_code" placeholder="Ex: CS401" class="form-control"
                        value="{{subject.Subject_code}}">
+                <small class="text-danger" id="err_subcode"></small>
+
             </div>
 
             <div class="mb-3">
                 <label class="form-label">Teacher</label>
                 <input type="text" name="subject_teacher" placeholder="Teacher" class="form-control"
                        value="{{subject.Subject_teacher}}">
+                <small class="text-danger" id="err_teacher"></small>
+
             </div>
 
             <div class="mb-3">
@@ -40,6 +45,8 @@
                     <option>S5</option>
                     <option>S6</option>
                 </select>
+                <small class="text-danger" id="err_sem"></small>
+
             </div>
 
             <div class="mb-3">
@@ -51,6 +58,8 @@
                     <option>EEE</option>
                     <option>CE</option>
                 </select>
+                <small class="text-danger" id="err_dep"></small>
+
             </div>
 
             <div class="text-center">
@@ -84,4 +93,42 @@
         {% endif %}
     {% endfor %}
 {% endif %}
+
+<script>
+    function validatesubname(){
+    err_subname.innerHTML=/^[A-Za-z\s]+$/.test(myform.subject_name.value.trim())
+    ? "" : "Enter a Valid Subject Name(eg: Operating System or OS)";
+    }
+
+    function Validatesubcode(){
+    err_subcode.innerHTML=/^[A-Z0-9]+$/.test(myform.subject_code.value.trim())
+    ? "" :"Enter a Valid Subject Code(eg : CST304)";
+    }
+
+    function Validateteacher(){
+    err_teacher.innerHTML=/^[A-Z][A-Za-z]*(?:\s(?:[A-Z][A-Za-z]*|[A-Z](?:\.[A-Z])+))+$/.test(myform.subject_teacher.value.trim())
+    ? "" : "Enter a Valid Teacher Name(eg: Anu J.T)";
+    }
+
+    function Validatesem(){
+    err_sem.innerHTML=myform.subject_sem.value==="-- Select Semester --"
+    ? "Please select a Semester":"";
+    }
+
+    function Validatedep(){
+    err_dep.innerHTML=myform.subject_dep.value === "-- Select Department --"
+    ? "Please select a Department" : "";
+    }
+
+    function Validation(){
+    validatesubname();
+    Validatesubcode();
+    Validateteacher();
+    Validatesem();
+    Validatedep();
+
+    return document.querySelectorAll(".text-danger:not(:empty)").length === 0;
+    }
+
+</script>
 {% endblock %}
