commit 124(sub validation set in html )

--- a/TeacherApp/templates/addsubject.html
+++ b/TeacherApp/templates/addsubject.html
@@ -37,28 +37,30 @@
             <div class="mb-3">
                 <label class="form-label">Semester</label>
                 <select name="subject_sem" class="form-control" onchange="Validatesem()">
-                    <option>-- Select Semester --</option>
-                    <option>S1</option>
-                    <option>S2</option>
-                    <option>S3</option>
-                    <option>S4</option>
-                    <option>S5</option>
-                    <option>S6</option>
+                    <option value="">-- Select Semester --</option>
+                    <option value="S1">S1</option>
+                    <option value="S2">S2</option>
+                    <option value="S3">S3</option>
+                    <option value="S4">S4</option>
+                    <option value="S5">S5</option>
+                    <option value="S6">S6</option>
                 </select>
                 <small class="text-danger" id="err_sem"></small>
             </div>
 
+
             <div class="mb-3">
-                <label class="form-label">Department</label>
-                <select name="subject_dep" class="form-control" onchange="Validatedep()">
-                    <option>-- Select Department --</option>
-                    <option>CSE</option>
-                    <option>EC</option>
-                    <option>EEE</option>
-                    <option>CE</option>
-                </select>
-                <small class="text-danger" id="err_dep"></small>
-            </div>
+    <label class="form-label">Department</label>
+    <select name="subject_dep" class="form-control" onchange="Validatedep()">
+        <option value="">-- Select Department --</option>
+        <option value="CSE">CSE</option>
+        <option value="EC">EC</option>
+        <option value="EEE">EEE</option>
+        <option value="CE">CE</option>
+    </select>
+    <small class="text-danger" id="err_dep"></small>
+</div>
+
 
 
             <div class="text-center">
@@ -93,33 +95,33 @@
 {% endif %}
 
 <script>
-    function validatesubname(){
-    err_subname.innerHTML=/^[A-Za-z\s]+$/.test(myform.subject_name.value.trim())
+    function Validatesubname(){
+    err_subname.innerHTML=/^[A-Z][A-Za-z]*(?:\s[A-Za-z]+)*$/.test(myform.subject_name.value.trim())
     ? "" : "Enter a Valid Subject Name(eg: Operating System or OS)";
     }
 
     function Validatesubcode(){
     err_subcode.innerHTML=/^[A-Z0-9]+$/.test(myform.subject_code.value.trim())
-    ? "" :"Enter a Valid Subject Code(eg : CST304)";
-    }
+    ? "" :"Enter a Valid Subject Code(eg: CST403)";
+
 
     function Validateteacher(){
     err_teacher.innerHTML=/^[A-Z][A-Za-z]*(?:\s(?:[A-Z][A-Za-z]*|[A-Z](?:\.[A-Z])+))+$/.test(myform.subject_teacher.value.trim())
-    ? "" : "Enter a Valid Teacher Name(eg: Anu J.T)";
+    ? "" : "Enter a Valid Teacher Name(eg: Anu J.T or Anu Kimal)";
     }
 
     function Validatesem(){
-    err_sem.innerHTML=myform.subject_sem.value==="-- Select Semester --"
+    err_sem.innerHTML=myform.subject_sem.value===""
     ? "Please select a Semester":"";
     }
 
     function Validatedep(){
-    err_dep.innerHTML=myform.subject_dep.value === "-- Select Department --"
+    err_dep.innerHTML=myform.subject_dep.value === ""
     ? "Please select a Department" : "";
     }
 
     function Validation(){
-    validatesubname();
+    Validatesubname();
     Validatesubcode();
     Validateteacher();
     Validatesem();
