commit 125(sub validation set in html )

--- a/TeacherApp/templates/addstudent.html
+++ b/TeacherApp/templates/addstudent.html
@@ -139,7 +139,7 @@
 <script>
     function validateName() {
         err_name.innerHTML =/^[A-Z][A-Za-z]*(?:\s(?:[A-Z][A-Za-z]*|[A-Z](?:\.[A-Z])+))+$/.test(myform.student_name.value.trim())
-            ? "" : "Only alphabets, space and dot allowed";
+            ? "" : "Enter a valid Student Name (eg: Anu M.K or Anu Joseph)";
     }
 
     function validateRoll() {
