commit 127(sub validation set in html )

--- a/TeacherApp/templates/addstudent.html
+++ b/TeacherApp/templates/addstudent.html
@@ -137,6 +137,18 @@
 <!-- ================= JS VALIDATION ================= -->
 
 <script>
+
+    const err_name = document.getElementById("err_name");
+    const err_roll = document.getElementById("err_roll");
+    const err_reg = document.getElementById("err_reg");
+    const err_batch = document.getElementById("err_batch");
+    const err_sem = document.getElementById("err_sem");
+    const err_duration = document.getElementById("err_duration");
+    const err_phone = document.getElementById("err_phone");
+    const err_email = document.getElementById("err_email");
+    const err_pwd = document.getElementById("err_pwd");
+    const err_confirm = document.getElementById("err_confirm");
+
     function validateName() {
         err_name.innerHTML =/^[A-Z][A-Za-z]*(?:\s(?:[A-Z][A-Za-z]*|[A-Z](?:\.[A-Z])+))+$/.test(myform.student_name.value.trim())
             ? "" : "Enter a valid Student Name (eg: Anu M.K or Anu Joseph)";
@@ -180,8 +192,8 @@
     }
 
     function validatePassword() {
-        err_pwd.innerHTML = /^(?=.*[A-Z])(?=.*\d)(?=.*[@#]).{6,}$/.test(myform.student_password.value)
-            ? "" : "1 uppercase, 1 digit, 1 @/#, min 6 chars";
+        err_pwd.innerHTML = /^(?=.{6,}$)[A-Z](?:[a-z0-9]*[_$#@][a-z0-9]*|[_$#@][a-z0-9]*)$/.test(myform.student_password.value)
+            ? "" : "1 uppercase, 1 digit, 1 speaicl char(@,#,$,_), min 6 chars";
     }
 
     function validateConfirm() {
